<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2019 The Netty Project
  ~
  ~ The Netty Project licenses this file to you under the Apache License,
  ~ version 2.0 (the "License"); you may not use this file except in compliance
  ~ with the License. You may obtain a copy of the License at:
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations
  ~ under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.netty</groupId>
    <artifactId>netty-parent</artifactId>
<<<<<<<< HEAD:transport-blockhound-tests/pom.xml
    <version>5.0.0.Final-SNAPSHOT</version>
========
    <version>4.1.53.Final-SNAPSHOT</version>
>>>>>>>> netty/master:transport-udt/pom.xml
  </parent>

  <artifactId>netty-transport-blockhound-tests</artifactId>
  <packaging>jar</packaging>
  <description>
    Tests for the BlockHound integration.
  </description>

  <name>Netty/Transport/BlockHound/Tests</name>

  <profiles>
    <profile>
      <id>java13</id>
      <activation>
        <jdk>13</jdk>
      </activation>
      <properties>
        <argLine.common>-XX:+AllowRedefinitionToAddDeleteMethods</argLine.common>
      </properties>
    </profile>
    <profile>
      <id>java14</id>
      <activation>
        <jdk>14</jdk>
      </activation>
      <properties>
        <argLine.common>-XX:+AllowRedefinitionToAddDeleteMethods</argLine.common>
      </properties>
    </profile>
  </profiles>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <!-- Needed for SelfSignedCertificate -->
    <argLine.java9.extras>--add-exports java.base/sun.security.x509=ALL-UNNAMED</argLine.java9.extras>
    <skipJapicmp>true</skipJapicmp>
  </properties>

  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
<<<<<<<< HEAD:transport-blockhound-tests/pom.xml
      <artifactId>netty-transport</artifactId>
========
      <artifactId>netty-common</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>netty-buffer</artifactId>
>>>>>>>> netty/master:transport-udt/pom.xml
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>netty-handler</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>${tcnative.artifactId}</artifactId>
      <classifier>${tcnative.classifier}</classifier>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk15on</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>io.projectreactor.tools</groupId>
      <artifactId>blockhound</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
<<<<<<<< HEAD:transport-blockhound-tests/pom.xml
========

  <build>
    <plugins>
      <!-- run each test in separate JVM -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <reuseForks>false</reuseForks>
        </configuration>
      </plugin>
    </plugins>
  </build>
>>>>>>>> netty/master:transport-udt/pom.xml
</project>
